separei os arquivos em pastas

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Padaria GabGab</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
-    <img class="imagem" src="fundo.jpg" height="30"  width="1349" alt="pão">
+    <img class="imagem" src="imagens/fundo.jpg" height="30"  width="1349" alt="pão">
     <section>
-        <img class="pao" src="pãozinho.jpg " height="150" width="150">
+        <img class="pao" src="imagens/pãozinho.jpg " height="150" width="150">
         <ul>
             <a class="button" href="C:\Users\gabri\OneDrive\Documentos\programinhas\html.padaria\index.html" 
             ><button>HOME</button></a> 
@@ -27,14 +27,14 @@
         </ul>
     </section>
 
-        <img src="pal.jpg" height="600" width="1349" >
-        <img class="fundo" src="fundo.jpg" height="30"  width="1349" alt="pão">
+        <img src="imagens/pal.jpg" height="600" width="1349" >
+        <img class="fundo" src="imagens/fundo.jpg" height="30"  width="1349" alt="pão">
 
 
 
 
     <div>
-        <img class="imagem" src="fundoo.jpg" height="220"  width="1349" alt="pão">
+        <img class="imagem" src="imagens/fundoo.jpg" height="220"  width="1349" alt="pão">
         
         
     </div>
