--- a/paginaCardapio.html
+++ b/paginaCardapio.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Padaria GabGab</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
-    <img class="imagem" src="fundo.jpg" height="30"  width="1349" alt="pão">
+    <img class="imagem" src="imagens/fundo.jpg" height="30"  width="1349" alt="pão">
     <section>
-        <img class="pao" src="pãozinho.jpg " height="150" width="150">
+        <img class="pao" src="imagens/pãozinho.jpg " height="150" width="150">
         <ul>
             <a class="button" href="C:\Users\gabri\OneDrive\Documentos\programinhas\html.padaria\index.html" 
             ><button>HOME</button></a> 
@@ -29,22 +29,22 @@
 
     <h1 class="textsobre"> ---------------------------------------- CARDÁPIO ---------------------------------------- </h1>
 
-    <img class="cardapiofundo" src="cardapioo.jpg" height="300"  width="815" alt="pão">
+    <img class="cardapiofundo" src="imagens/cardapioo.jpg" height="300"  width="815" alt="pão">
 
     <section1>
-            <img class="cardapio" src="paoo.jpg" height="250"  width="250" alt="pão"> 
+            <img class="cardapio" src="imagens/paoo.jpg" height="250"  width="250" alt="pão"> 
             <a class="buttonM" href="#" target="_blank" ><button>PÃES</button></a> 
-            <img class="cardapio" src="pao.jpg" height="250"  width="250" alt="pão"> 
+            <img class="cardapio" src="imagens/pao.jpg" height="250"  width="250" alt="pão"> 
             <a class="buttonM" href="#" target="_blank" ><button>QUEIJOS</button></a> 
-            <img class="cardapio" src="pao.jpg" height="250"  width="250" alt="pão"> 
+            <img class="cardapio" src="imagens/pao.jpg" height="250"  width="250" alt="pão"> 
             <a class="buttonM" href="#" target="_blank" ><button>SALGADOS</button></a> 
     </section1>
     <section1>
-            <img class="cardapio" src="pao.jpg" height="250"  width="250" alt="pão"> 
+            <img class="cardapio" src="imagens/pao.jpg" height="250"  width="250" alt="pão"> 
             <a class="buttonM" href="#" target="_blank" ><button>DOCES</button></a> 
-            <img class="cardapio" src="pao.jpg" height="250"  width="250" alt="pão">  
+            <img class="cardapio" src="imagens/pao.jpg" height="250"  width="250" alt="pão">  
             <a class="buttonM" href="#" target="_blank" ><button>BOLOS</button></a> 
-            <img class="cardapio" src="pao.jpg" height="250"  width="250" alt="pão"> 
+            <img class="cardapio" src="imagens/pao.jpg" height="250"  width="250" alt="pão"> 
             <a class="buttonM" href="#" target="_blank" ><button>BEBIDAS</button></a> 
     </section1>
 
