Acrescentação de produtos e images nas tabelas

--- a/paginaCardapio.html
+++ b/paginaCardapio.html
@@ -101,56 +101,56 @@
         </tr>
 
         <tr>
-            <td>Pão Francês</td>
+            <td>Coxinha de frango</td>
             <td>Unidade</td>
             <td>R$ 1,00</td>
         </tr>
 
         <tr>
-            <td>Pão Carteira</td>
+            <td>Pastelzinho de frango/carne</td>
             <td>Unidade</td>
             <td>R$ 1,00</td>
         </tr>
 
         <tr>
-            <td>Pão de hamburguer</td>
+            <td>Enroladinho</td>
             <td>Unidade</td>
             <td>R$ 1,75</td>
         </tr>
 
         <tr>
-            <td>Pão de queijo</td>
+            <td>Empada de frango/carne</td>
             <td>Unidade</td>
             <td>R$ 0,75</td>
         </tr>
 
         <tr>
-            <td>Pão integral</td>
+            <td>Empadinha de frango/carne</td>
             <td>Unidade</td>
             <td>R$ 2,00</td>
         </tr>
 
         <tr>
-            <td>Pão de forma integral</td>
+            <td>Bolinho de queijo</td>
             <td>Pacote peso liquido 500g</td>
             <td>R$ 7,50</td>
         </tr>
 
         <tr>
-            <td>Baguete</td>
+            <td>Quibe de carne</td>
             <td>Peso liquido 215g</td>
             <td>R$ 6,00</td>
         </tr>
 
         <tr>
-            <td>Baguete recheada</td>
+            <td>Canudinho com atum</td>
             <td>Unidade</td>
             <td>R$ 9,00</td>
         </tr>
     </table>
     <br> <br>
 
-    <img class="sla" src="imagens/salgados.jpg" height="250"  width="700">
+    <img class="sla" src="imagens/brigadeiro.jpg" height="250"  width="700">
     <br> <br>
     <table border="x" class="tamanho" >
         <tr>
@@ -160,49 +160,108 @@
         </tr>
 
         <tr>
-            <td>Pão Francês</td>
-            <td>Unidade</td>
-            <td>R$ 1,00</td>
+            <td>Brigadeiro</td>
+            <td>Dezenas</td>
+            <td>R$ 5,75</td>
         </tr>
 
         <tr>
-            <td>Pão Carteira</td>
-            <td>Unidade</td>
-            <td>R$ 1,00</td>
+            <td>Brigadeiro de colher</td>
+            <td>Dezenas</td>
+            <td>R$ 10,00</td>
         </tr>
 
         <tr>
-            <td>Pão de hamburguer</td>
-            <td>Unidade</td>
-            <td>R$ 1,75</td>
+            <td>Brigadeiro com paçoca</td>
+            <td>Dezenas</td>
+            <td>R$ 7,75</td>
         </tr>
 
         <tr>
-            <td>Pão de queijo</td>
-            <td>Unidade</td>
-            <td>R$ 0,75</td>
+            <td>Beijinho</td>
+            <td>Dezenas</td>
+            <td>R$ 6,00</td>
         </tr>
 
         <tr>
-            <td>Pão integral</td>
+            <td>Mini tortelete</td>
+            <td>Dezenas</td>
+            <td>R$ 7,00</td>
+        </tr>
+
+        <tr>
+            <td>Maçã do amor</td>
             <td>Unidade</td>
             <td>R$ 2,00</td>
         </tr>
 
         <tr>
-            <td>Pão de forma integral</td>
+            <td>Pirulitos de chocolate decorados</td>
+            <td>Unidade</td>
+            <td>R$ 3,00</td>
+        </tr>
+
+        <tr>
+            <td>Cupcakes decorados</td>
+            <td>Unidade</td>
+            <td>R$ 5,00</td>
+        </tr>
+    </table>
+    <br> <br>
+
+    <img class="sla" src="imagens/bolinho.jpg" height="250"  width="700">
+    <br> <br>
+    <table border="x" class="tamanho" >
+        <tr>
+            <th>PRODUTO</th>
+            <th>UNIDADE</th>
+            <th>PREÇO</th>
+        </tr>
+
+        <tr>
+            <td>Bolo de chocolate</td>
+            <td>Unidade</td>
+            <td>R$ 1,00</td>
+        </tr>
+
+        <tr>
+            <td>Bolo de chocolate com morango</td>
+            <td>Unidade</td>
+            <td>R$ 1,00</td>
+        </tr>
+
+        <tr>
+            <td>Bolo de chocolate coco</td>
+            <td>Unidade</td>
+            <td>R$ 1,75</td>
+        </tr>
+
+        <tr>
+            <td>Bolo de coco</td>
+            <td>Unidade</td>
+            <td>R$ 0,75</td>
+        </tr>
+
+        <tr>
+            <td>Bolo de maracujá</td>
+            <td>Unidade</td>
+            <td>R$ 2,00</td>
+        </tr>
+
+        <tr>
+            <td>Bolo de leite</td>
             <td>Pacote peso liquido 500g</td>
             <td>R$ 7,50</td>
         </tr>
 
         <tr>
-            <td>Baguete</td>
+            <td>Chess cake</td>
             <td>Peso liquido 215g</td>
             <td>R$ 6,00</td>
         </tr>
 
         <tr>
-            <td>Baguete recheada</td>
+            <td>Bolo de sua preferência</td>
             <td>Unidade</td>
             <td>R$ 9,00</td>
         </tr>
@@ -212,7 +271,7 @@
     <img class="imagem" src="imagens/fundoo.jpg" height="75"  width="1349" alt="pão">
     <br>
 
-    <img class="sla" src="imagens/salgados.jpg" height="250"  width="700">
+    <img class="sla" src="imagens/refri.jpg" height="250"  width="700">
     <br> <br>
     <table border="x" class="tamanho" >
         <tr>
